v1.1.1 - fix broken css

--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,6 @@ p {
 }
 
 #show-emoji {
-    width: 80%;
-    max-width: 300px;
     font-size: 3rem;
     margin: 2rem;
 }
